Fix nav link issues , url on mobile

--- a/styles/common.css
+++ b/styles/common.css
@@ -177,4 +177,9 @@ body {
         max-height: 500px;
         display: grid;
     }
+
+    .dropdown-icon,
+    .dropdown-menu {
+        display: block;
+    }
 }
